--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <div class="header"></div>
-    <div class="calculator"></div>
+    <div class="calculator">
+        <div class="numbers no-zero">
+            <div class="number" id = "one">1</div>
+            <div class="number" id = "two">2</div>
+            <div class="number" id = "three">3</div>
+            <div class="number" id = "four">4</div>
+            <div class="number" id = "five">5</div>
+            <div class="number" id = "six">6</div>
+            <div class="number" id = "seven">7</div>
+            <div class="number" id = "eight">8</div>
+            <div class="number" id = "nine">9</div>
+        </div>
+    </div>
     <div class="footer"></div>
 </body>
 </html>
