added text to header and footer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Basic Calculator</title>
 </head>
 <body>
-    <div class="header"></div>
+    <div class="header">Basic Calculator</div>
     <div class="calculator">
         <div class="numbers no-zero">
             <div class="number" id = "one">1</div>
@@ -21,6 +21,6 @@
             <div class="number" id = "nine">9</div>
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">Copyright © Saum</div>
 </body>
 </html>
