organized html for button layout in calculator

--- a/index.html
+++ b/index.html
@@ -8,17 +8,36 @@
 </head>
 <body>
     <div class="header">Basic Calculator</div>
-    <div class="calculator">
-        <div class="numbers no-zero">
-            <div class="number" id = "one">1</div>
-            <div class="number" id = "two">2</div>
-            <div class="number" id = "three">3</div>
-            <div class="number" id = "four">4</div>
-            <div class="number" id = "five">5</div>
-            <div class="number" id = "six">6</div>
-            <div class="number" id = "seven">7</div>
-            <div class="number" id = "eight">8</div>
-            <div class="number" id = "nine">9</div>
+    <div class="app">
+        <div class="calculator">
+            <div class="display">
+                <div class="equation"></div>
+                <div class="value"></div>
+            </div>
+            <div class="btns">
+                <div class="left-btns">
+                    <!-- AC, +-, % -->
+                    <div class="numbers no-zero">
+                        <div class="number button" id = "one">1</div>
+                        <div class="number button" id = "two">2</div>
+                        <div class="number button" id = "three">3</div>
+                        <div class="number button" id = "four">4</div>
+                        <div class="number button" id = "five">5</div>
+                        <div class="number button" id = "six">6</div>
+                        <div class="number button" id = "seven">7</div>
+                        <div class="number button" id = "eight">8</div>
+                        <div class="number button" id = "nine">9</div>
+                    </div>
+                    <!-- 0 and . -->
+                </div>
+                <div class="right-btns">
+                    <div class="operation button" id = "divide"></div>
+                    <div class="operation button" id = "multiply"></div>
+                    <div class="operation button" id = "subtract"></div>
+                    <div class="operation button" id = "add"></div>
+                    <div class="operation button" id = "equal"></div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="footer">Copyright © Saum</div>
