created button elements for every pressable button in the calculator

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             <div class="btns">
                 <div class="left-btns">
                     <!-- AC, +-, % -->
+                    <div class="top-row">
+                        <div class="clear button">AC</div>
+                        <div class="plus-minus button">+/-</div>
+                        <div class="percent button">%</div>
+                    </div>
                     <div class="numbers no-zero">
                         <div class="number button" id = "one">1</div>
                         <div class="number button" id = "two">2</div>
@@ -29,13 +34,15 @@
                         <div class="number button" id = "nine">9</div>
                     </div>
                     <!-- 0 and . -->
+                    <div class="number button double" id="zero">0</div>
+                    <div class="number button decimal" id="decimal">.</div>
                 </div>
                 <div class="right-btns">
-                    <div class="operation button" id = "divide"></div>
-                    <div class="operation button" id = "multiply"></div>
-                    <div class="operation button" id = "subtract"></div>
-                    <div class="operation button" id = "add"></div>
-                    <div class="operation button" id = "equal"></div>
+                    <div class="operation button" id = "divide">÷</div>
+                    <div class="operation button" id = "multiply">x</div>
+                    <div class="operation button" id = "subtract">-</div>
+                    <div class="operation button" id = "add">+</div>
+                    <div class="operation button" id = "equal">=</div>
                 </div>
             </div>
         </div>
