--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="app">
         <div class="calculator">
             <div class="display">
-                <div class="equation"></div>
-                <div class="value"></div>
+                <div class="equation">1 + 3</div>
+                <div class="value">0</div>
             </div>
             <div class="btns">
                 <div class="left-btns">
