--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
                         <div class="number button" id = "nine">9</div>
                     </div>
                     <!-- 0 and . -->
-                    <div class="number button double" id="zero">0</div>
-                    <div class="number button decimal" id="decimal">.</div>
+                    <div class="bottom-row">
+                        <div class="number button double" id="zero">0</div>
+                        <div class="number button decimal" id="decimal">.</div>
+                    </div>
                 </div>
                 <div class="right-btns">
                     <div class="operation button" id = "divide">÷</div>
