removed subsections for each group of buttons

--- a/index.html
+++ b/index.html
@@ -15,37 +15,34 @@
                 <div class="value">0</div>
             </div>
             <div class="btns">
-                <div class="left-btns">
-                    <!-- AC, +-, % -->
-                    <div class="top-row">
-                        <div class="clear button">AC</div>
-                        <div class="plus-minus button">+/-</div>
-                        <div class="percent button">%</div>
-                    </div>
-                    <div class="numbers no-zero">
-                        <div class="number button" id = "one">1</div>
-                        <div class="number button" id = "two">2</div>
-                        <div class="number button" id = "three">3</div>
-                        <div class="number button" id = "four">4</div>
-                        <div class="number button" id = "five">5</div>
-                        <div class="number button" id = "six">6</div>
-                        <div class="number button" id = "seven">7</div>
-                        <div class="number button" id = "eight">8</div>
-                        <div class="number button" id = "nine">9</div>
-                    </div>
-                    <!-- 0 and . -->
-                    <div class="bottom-row">
-                        <div class="number button double" id="zero">0</div>
-                        <div class="number button decimal" id="decimal">.</div>
-                    </div>
-                </div>
-                <div class="right-btns">
-                    <div class="operation button" id = "divide">÷</div>
-                    <div class="operation button" id = "multiply">x</div>
-                    <div class="operation button" id = "subtract">-</div>
-                    <div class="operation button" id = "add">+</div>
-                    <div class="operation button" id = "equal">=</div>
-                </div>
+                <!-- first row-->
+                <div class="clear button">AC</div>
+                <div class="plus-minus button">+/-</div>
+                <div class="percent button">%</div>
+                <div class="operation button" id = "divide">÷</div>
+                
+                <!-- second row -->
+                <div class="number button" id = "seven">7</div>
+                <div class="number button" id = "eight">8</div>
+                <div class="number button" id = "nine">9</div>
+                <div class="operation button" id = "multiply">x</div>
+                
+                <!-- third row -->
+                <div class="number button" id = "four">4</div>
+                <div class="number button" id = "five">5</div>
+                <div class="number button" id = "six">6</div>
+                <div class="operation button" id = "subtract">-</div>
+
+                <!-- fourth row -->
+                <div class="number button" id = "one">1</div>
+                <div class="number button" id = "two">2</div>
+                <div class="number button" id = "three">3</div>
+                <div class="operation button" id = "add">+</div>
+
+                <!-- fifth row -->
+                <div class="number button double" id="zero">0</div>
+                <div class="number button decimal" id="decimal">.</div>
+                <div class="operation button" id = "equal">=</div>
             </div>
         </div>
     </div>
