--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             </div>
             <div class="btns">
                 <!-- first row-->
-                <div class="clear button">AC</div>
-                <div class="plus-minus button">+/-</div>
-                <div class="percent button">%</div>
+                <div class="extra clear button">AC</div>
+                <div class="extra plus-minus button">+/-</div>
+                <div class="extra percent button">%</div>
                 <div class="operation button" id = "divide">÷</div>
                 
                 <!-- second row -->
