changed extra button's classes to ids to make them easier to identify

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             </div>
             <div class="btns">
                 <!-- first row-->
-                <div class="extra clear button">AC</div>
-                <div class="extra plus-minus button">+/-</div>
-                <div class="extra percent button">%</div>
+                <div class="extra button" id="clear">AC</div>
+                <div class="extra button" id="plus-minus">+/-</div>
+                <div class="extra button" id="percent">%</div>
                 <div class="operation button" id = "divide">÷</div>
                 
                 <!-- second row -->
