--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
                 <!-- fifth row -->
                 <div class="number button double" id="zero">0</div>
                 <div class="number button decimal" id="decimal">.</div>
-                <div class="operation button" id = "equal">=</div>
+                <div class="equal button" id = "equal">=</div>
             </div>
         </div>
     </div>
     <div class="footer">Copyright © Saum</div>
+    <script src="./calculator.js"></script>
 </body>
 </html>
