changed all the div classes to button classes for hte buttons

--- a/index.html
+++ b/index.html
@@ -16,33 +16,33 @@
             </div>
             <div class="btns">
                 <!-- first row-->
-                <div class="extra button" id="clear">AC</div>
-                <div class="extra button" id="plus-minus">+/-</div>
-                <div class="extra button" id="percent">%</div>
-                <div class="operation button" id = "divide">÷</div>
+                <button class="extra button" id="clear">AC</button>
+                <button class="extra button" id="plus-minus">+/-</button>
+                <button class="extra button" id="percent">%</button>
+                <button class="operation button" id = "divide">÷</button>
                 
                 <!-- second row -->
-                <div class="number button" id = "seven">7</div>
-                <div class="number button" id = "eight">8</div>
-                <div class="number button" id = "nine">9</div>
-                <div class="operation button" id = "multiply">x</div>
+                <button class="number button" id = "seven">7</button>
+                <button class="number button" id = "eight">8</button>
+                <button class="number button" id = "nine">9</button>
+                <button class="operation button" id = "multiply">x</button>
                 
                 <!-- third row -->
-                <div class="number button" id = "four">4</div>
-                <div class="number button" id = "five">5</div>
-                <div class="number button" id = "six">6</div>
-                <div class="operation button" id = "subtract">-</div>
+                <button class="number button" id = "four">4</button>
+                <button class="number button" id = "five">5</button>
+                <button class="number button" id = "six">6</button>
+                <button class="operation button" id = "subtract">-</button>
 
                 <!-- fourth row -->
-                <div class="number button" id = "one">1</div>
-                <div class="number button" id = "two">2</div>
-                <div class="number button" id = "three">3</div>
-                <div class="operation button" id = "add">+</div>
+                <button class="number button" id = "one">1</button>
+                <button class="number button" id = "two">2</button>
+                <button class="number button" id = "three">3</button>
+                <button class="operation button" id = "add">+</button>
 
                 <!-- fifth row -->
-                <div class="number button double" id="zero">0</div>
-                <div class="number button decimal" id="decimal">.</div>
-                <div class="equal button" id = "equal">=</div>
+                <button class="number button double" id="zero">0</button>
+                <button class="number button decimal" id="decimal">.</button>
+                <button classs="equal button" id = "equal">=</button>
             </div>
         </div>
     </div>
