--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <!-- fifth row -->
                 <button class="number button double" id="zero">0</button>
                 <button class="number button decimal" id="decimal">.</button>
-                <button classs="equal button" id = "equal">=</button>
+                <button class="equal button" id = "equal">=</button>
             </div>
         </div>
     </div>
