created the deleteVal function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="btns">
                 <!-- first row-->
                 <button class="extra button" id="clear">AC</button>
-                <button class="extra button" id="plus-minus">+/-</button>
+                <button class="extra button" id="delete">del</button>
                 <button class="extra button" id="percent">%</button>
                 <button class="operation button" id = "divide">÷</button>
                 
