--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="app">
         <div class="calculator">
             <div class="display">
-                <div class="equation">1 + 3</div>
+                <div class="equation">0</div>
                 <div class="value">0</div>
             </div>
             <div class="btns">
